--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+	{% if page.use_math %}
+		{% include mathjax_support.html %}
+	{% endif %}
+
     {% include head.html %}
     {% include head/custom.html %}
   </head>
